--- a/basemedia/basemedia/src/main/res/layout/item_media.xml
+++ b/basemedia/basemedia/src/main/res/layout/item_media.xml
@@ -108,6 +108,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:text="16 May"
+            android:textStyle="italic"
             android:textColor="@android:color/white"
             android:textSize="7sp" />
 
